[package]
name = "ekubo-example"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
envy = "0.4.2"
ethcontract = "0.25.8"
evm_ekubo_sdk = "0.4.4"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = {version = "1.44.2", features = ["full"] }
web3 = "0.19.0"
